--- a/index.css
+++ b/index.css
@@ -1,12 +1,14 @@
 body {
+    align-items: center;
+    justify-content: center;
 }
 
 section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
     background-color: lightgray;
 }
 
